# marketing-automation-platform

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
app/: main.py  seed_data.py
app/analytics/: metrics.py  reporting.py
app/api/: deps.py
app/api/routes/: auth.py  automation.py  campaigns.py  contacts.py  dashboard.py  health.py  newsletter.py
app/core/: __init__.py  cache.py  celery_app.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
app/integrations/: webhooks.py
app/models/: activity_log.py  api_log.py  automation_job.py  campaign.py  campaign_metric.py  contact.py  email_event.py  lead_event.py  newsletter_campaign.py  user.py
app/repositories/: automation_job.py  base.py  campaign.py  contact.py  user.py
app/scheduler/: scheduler.py
app/schemas/: auth.py  automation.py  campaign.py  contact.py  dashboard.py  newsletter.py
app/services/integrations/: base.py  google_ads.py  google_analytics.py  hubspot.py  mailchimp.py  meta_ads.py
app/workers/: tasks.py
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  init-db.sql  nginx.conf  run_scheduler.py
tests/: conftest.py  test_api.py  test_services.py
