[project]
name = "marketing-automation-platform"
version = "1.0.0"
description = "Production-grade Marketing Automation & Reporting Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.0.6",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.2",
    "APScheduler>=3.10.4",
    "httpx>=0.27.0",
    "alembic>=1.13.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
